fixed navbar....it now collapses on clicks on mobile only

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -245,6 +245,23 @@ h3.headings.title {
 }
 
 @media screen and (min-width: 768px) {
+
+  /*.navbar-collapse.collapse {
+    display: block !important;
+  }
+
+  .navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}*/
+
+
   h1 {
     margin-top: 2em;
   }
